# ask-confluence

./: .gitignore  README.md  pyproject.toml
ask_confluence/: config.py  confluence_downloader.py  data_transformer.py  model_predictor.py  model_trainer.py  pipeline.py
ask_confluence/app/resource/: app.py  main.py
ask_confluence/app/service/: answer_service.py
configs/: .secrets.yml  confluence.yml  model.yml
frontend_app/: package-lock.json  package.json
frontend_app/pages/: index.js  index.module.css
tests/: conftest.py  test_ask_confluence.py  test_config.py  test_confluence_downloader.py  test_data_transformer.py  test_model_predictor.py
